ISIS-3275: surefire fixes